added custom role middleware and admin get all user info route
